add JS for drop menu

--- a/site/static/style.css
+++ b/site/static/style.css
@@ -552,6 +552,10 @@ video {
   position: fixed;
 }
 
+.absolute {
+  position: absolute;
+}
+
 .left-24 {
   left: 6rem;
 }
@@ -733,11 +737,6 @@ video {
 
 .p-3 {
   padding: 0.75rem;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
 }
 
 .px-4 {
