--- a/site/templates/association.html
+++ b/site/templates/association.html
@@ -1,46 +1,45 @@
 {% extends "base.html" %} {% block title %} Association {% endblock %} {% block
 body %}
-<div class="max-w-2xl mx-auto mb-10">
-    <div class="inline-block float-left text-yellow-100 text-left border border-gray-200 bg-black rounded-mid p-1 fixed justify-center left-24 top-3">
-		<a class="hover:text-blue-400" href="{{ url_for("oop") }}">&lt; Back to OOP</a>
+<div class="pageBody">
+    <div class="backButton">
+		<a class="backButtonHover" href="{{ url_for("oop") }}">&lt; Back to OOP</a>
 	</div>
-	<h1 class="my-10 text-yellow-100 text-2xl">Association</h1>
-
-	<p>Association represents a relationship between two or more objects</p>
-	<h2 class="mt-16 text-yellow-100 text-xl">Key Points:</h2>
-	<div class="text-left">
-		<h3 class="mt-5 text-yellow-100">Definition:</h3>
-		<p>
+	<h1 class="h1Title">Association</h1>
+	<p class="pText">Association represents a relationship between two or more objects</p>
+	<h2 class="h2Title">Key Points</h2>
+	<div class="bodyDiv">
+		<h3 class="h3Title">Definition:</h3>
+		<p class="pExplain">
 			Association is a "using" relationship between two or more objects.
 			It's a way for one objects to interact with another, without
 			necessarily having a strong dependency. For example, a [ Driver ]
 			object might have an association with a [ car ] object, because the
 			driver uses the car
 		</p>
-		<h3 class="mt-5 text-yellow-100">Multiplicity:</h3>
-		<p>
+		<h3 class="h3Title">Multiplicity:</h3>
+		<p class="pExplain">
 			Association can be one-to-one, one-to-many, many-to-one, or
 			many-to-many. For example, a [ Teacher ] object and a [ Student ]
 			object could have a many-to-many association, because a teacher can
 			teach many students, and a student can have many teachers.
 		</p>
-		<h3 class="mt-5 text-yellow-100">Directionality:</h3>
-		<p>
+		<h3 class="h3Title">Directionality:</h3>
+		<p class="pExplain">
 			Association can be unidirectional or bidirectional. In a
 			unidirectional association, one object is aware of another and can
 			interact with it, but not vice versa. In a bidirectional
 			association, both objects are aware of each other.
 		</p>
-		<h3 class="mt-5 text-yellow-100">Navigation:</h3>
-		<p>
+		<h3 class="h3Title">Navigation:</h3>
+		<p class="pExplain">
 			The direction of the association between two classes is called
 			navigation. It can be either from one class to another or vice
 			versa, or both.
 		</p>
-		<h3 class="mt-5 text-yellow-100">
+		<h3 class="h3Title">
 			Association vs Aggregation vs Composition:
 		</h3>
-		<p>
+		<p class="pExplain">
 			These are three types of relationships in OOP. Association is the
 			most general, aggregation is a special form of association (a
 			"has-a" relationship, where the child can exist independently of the
@@ -48,14 +47,13 @@ body %}
 			the child cannot exist independently of the parent).
 		</p>
 	</div>
-	<h2 class="mt-16 text-yellow-100 text-xl">
-		Examples of Different relationships:
+	<h2 class="h2Title">
+		Examples of Different Relationships In Python
 	</h2>
-	<div class="text-left">
-		<h3 class="mt-10 text-yellow-100">One-To-One Relationship:</h3>
-
+		<h3 class="h3Title">One-To-One Relationship</h3>
+		<div class="bodyDiv">
 		<pre
-			class="p-1 bg-forest text-white font-mono rounded-md overflow-auto my-4"
+			class="codeBox"
 		>
     <code>
 class Car:                      # define the car class
@@ -74,18 +72,18 @@ driver = Driver("John")     # create a Driver instance 'driver' with the name "J
 driver.drive(car)	        # call the 'drive' method on the 'driver' instance, passing in the 'car' instance
     </code>
     </pre>
-		<p>
+		<p class="pText">
 			In this example, the [ Driver ] class has an association with the [
 			Car ] class, because it uses a [ Car ] object in its [ drive ]
 			method. This is a one-to-one, unidirectional association.
 		</p>
-		<p>
+		<p class="pText">
 			This is a one-to-one relationship because one instance of the [
 			Driver ] class is associated with one instance of the [ Car ] class
 			in the drive method. The [ drive ] method is called on one [ Driver
 			] instance and takes one [ Car ] instance as an argument.
 		</p>
-		<p>
+		<p class="pText">
 			It's important to note that this doesn't mean a [ Driver ] can only
 			ever driver one [ Car ] or vice versa. If you had multiple [ Car ]
 			instances, you could call [ drive ] on the same [ Driver ] with each
@@ -93,15 +91,16 @@ driver.drive(car)	        # call the 'drive' method on the 'driver' instance, pa
 			one-to-one relationship because one [ Driver ] is driving one [ Car
 			].
 		</p>
-
-		<h3 class="mt-10 text-yellow-100">One-To-Many Relationship:</h3>
-		<p>
+	</div>
+		<h3 class="h3Title">One-To-Many Relationship</h3>
+		<div class="bodyDiv">
+		<p class="pText">
 			Let's consider a scenario where a Teacher can have many Students.
 			This is a one-to-many relationship because one Teacher is associated
 			with multiple Student instances.
 		</p>
 		<pre
-			class="p-1 bg-forest text-white font-mono rounded-md overflow-auto my-4"
+			class="codeBox"
 		>
 <code>
 class Student:
@@ -137,7 +136,7 @@ teacher.add_student(student3)
 teacher.list_students()
 </code>
         </pre>
-		<p>
+		<p class="pText">
 			In this code, the [ Teacher ] class has a method [ add_student ]
 			that takes a [ Student ] instance and adds it to the [ students ]
 			list. The [ list_students ] method then goes through the [ students
@@ -145,7 +144,9 @@ teacher.list_students()
 			one-to-many relationship because one [ Teacher ] is associated with
 			many [ Student ] instances.
 		</p>
-		<h3 class="mt-10 text-yellow-100">Many-To-Many Relationship:</h3>
+	</div>
+		<h3 class="h3Title">Many-To-Many Relationship</h3>
+		<div class="bodyDiv">
 		<p>
 			A many-to-many relationship occurs when multiple instances of one
 			class are associated with multiple instances of another class.
@@ -154,7 +155,7 @@ teacher.list_students()
 		</p>
 
 		<pre
-			class="p-1 bg-forest text-white font-mono rounded-md overflow-auto my-4"
+			class="codeBox"
 		>
 <code>
 class Student:
@@ -192,7 +193,7 @@ student2.enroll(course1)
 course1.list_students()
 course2.list_students()</code>
 </pre>
-		<p>
+		<p class="pText">
 			In this code, both the [ Student ] and [ Course ] classes have a
 			list to hold their associations (the [ courses ] list in [ Student ]
 			and the [ students ] list in [ Course ]). The [ enroll ] method in [
@@ -201,8 +202,10 @@ course2.list_students()</code>
 			many-to-many relationship, because a [ Student ] can be enrolled in
 			many [ Courses ], and a [ Course ] can have many [ Students ].
 		</p>
-		<h3 class="mt-10 text-yellow-100">Many-To-One Relationship:</h3>
-		<p>
+	</div>
+		<h3 class="h3Title">Many-To-One Relationship</h3>
+		<div class="bodyDiv">
+		<p class="pText">
 			A many-to-one relationship occurs when multiple instances of one
 			class are associated with a single instance of another class.
 			Consider a situation where a Child has one Mother, but a Mother can
@@ -210,7 +213,7 @@ course2.list_students()</code>
 		</p>
 
 		<pre
-			class="p-1 bg-forest text-white font-mono rounded-md overflow-auto my-4"
+			class="codeBox"
 		>
 <code>
 class Child:
@@ -236,7 +239,7 @@ child2 = Child("Bob", mother)
 mother.list_children()              # list the children for the mother
 </code>
 </pre>
-		<p>
+		<p class="pText">
 			In this code, the [ Mother ] class has a list [ children ] to hold
 			her [ Child ] instances. When a [ Child ] is created, it's given a [
 			Mother ] instance, and it adds itself to the [ Mother ]s [ children
