--- a/site/templates/classes-and-objects.html
+++ b/site/templates/classes-and-objects.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %} {% block title %} Classes & Objects {% endblock %} {%
 block body %}
-<div class="max-w-2xl mx-auto">
-	<div class="inline-block float-left text-yellow-100 text-left border border-gray-200 bg-black rounded-mid p-1 fixed justify-center left-24 top-3">
-		<a class="hover:text-blue-400" href="{{ url_for("oop") }}">&lt; Back to OOP</a>
+<div class="pageBody">
+	<div class="backButton">
+		<a class="backButtonHover" href="{{ url_for("oop") }}">&lt; Back to OOP</a>
 	</div>
-	<h1 class="my-10 text-yellow-100 text-2xl">CLASSES & OBJECTS</h1>
-	<div class="text-left">
-		<p>
+	<h1 class="h1Title">CLASSES & OBJECTS</h1>
+		<p class="pText">
 			A class is a blueprint or prototype the defines the variables and
 			the methods (functions) common to all objects of a certain kind.
 		</p>
-		<p class="mt-5">An example of a class in Python would be:</p>
+		<h2 class="h2Title">An Example of Classes In Python</h2>
+		<div class="bodyDiv">
 		<pre
-			class="p-1 bg-forest text-white font-mono rounded-md overflow-auto my-4"
+			class="codeBox"
 		>
 <code>
 class Car: 
@@ -25,101 +25,101 @@ class Car:
 			print("Engine Started")
 </code>
 		</pre>
-		<p class="my-5">
+		<p class="pText">
 			In this example, [ Car ] is the class. It has an __init__ method
 			that is used to initialize new objects of this class, and a [
 			start_engine ] method that all [ Car ] objects will have.
 		</p>
-		<p class="my-5">
+		<p class="pText">
 			An object is an instance of a class. You can create an object of the
 			[ Car ] class like so:
 		</p>
 		<pre
-			class="p-1 bg-forest text-white rounded-md overflow-auto max-w-2xl mx-auto my-4"
+			class="codeBox"
 		>
     <code>
 my_car = Car("Toyota", "Supra", 2021)
     </code>
 </pre>
-		<p class="my-5">
+		<p class="pText">
 			In this example, [ my_car ] is an object of the [ Car ] class, with
 			brand "Toyota", model "Corolla", and year 2021. You can call the
 			methods of the class on this object like this:
 		</p>
 		<pre
-			class="p-1 bg-forest text-white rounded-md overflow-auto max-w-2xl mx-auto my-4"
+			class="codeBox"
 		>
 			<code>
-my_car.start_engine()	<span class="comment"># prints "Engine started"</span>
+my_car.start_engine()	# prints "Engine started"
     </code>
 </pre>
-		<p class="my-5">
+		<p class="pText">
 			Each object has its own values for the variables defined in the
 			class, and can use the methods defined in the class. You can create
 			as many objects of a class as you need, and they are all independent
 			of each other. If you change a variable in one object, it does not
 			affect other objects.
 		</p>
-		<p class="mt-5">
+		<p class="pText">
 			In summary, a class is like a blueprint, and an object is something
 			you build based on that blueprint. The class defines what variables
 			and methods an object will have, and the object is an instance of
 			the class with actual values.
 		</p>
 	</div>
-	<h3 class="mt-16 text-yellow-100 text-xl">
-		Benefits of using classes and objects in OOP:
-	</h3>
-	<div class="text-left">
-		<h4 class="mt-5 text-yellow-100">Modularity:</h4>
-		<p>
+	<h2 class="h2Title">
+		Benefits of using classes and objects in OOP
+	</h2>
+	<div class="bodyDiv">
+		<h3 class="h3Title">Modularity:</h3>
+		<p class="pExplain">
 			The source code for an object can be written and maintained
 			independently of the source code for other objects. Once created, an
 			object can be easily passed around inside the system.
 		</p>
-		<h4 class="mt-5 text-yellow-100">Information-hiding:</h4>
-		<p>
+		<h3 class="h3Title">Information-hiding:</h3>
+		<p class="pExplain">
 			By interacting only with an object's methods, the details of its
 			internal implementation remain hidden from the outside world.
 		</p>
-		<h4 class="mt-5 text-yellow-100">Code Re-usability:</h4>
-		<p>
+		<h3 class="h3Title">Code Re-usability:</h3>
+		<p class="pExplain">
 			If an object already exists (perhaps written by another person), you
 			can use that object in your program. This allows specialists to
 			implement/test/debug complex, task-specific objects, which you can
 			then trust to run your own code.
 		</p>
-		<h4 class="mt-5 text-yellow-100">Plug-ability & Debugging Ease:</h4>
-		<p>
+		<h3 class="h3Title">Plug-ability & Debugging Ease:</h3>
+		<p class="pExplain">
 			If a particular object turns out to be problematic, you can simply
 			remove it from your application and plug in a different object as
 			its replacement. This is analogous to fixing mechanical problems in
 			the real world. If a bolt breaks, you replace it, not the entire
 			machine.
 		</p>
-		<h4 class="mt-5 text-yellow-100">Encapsulation:</h4>
-		<p>
+		<h3 class="h3Title">Encapsulation:</h3>
+		<p class="pExplain">
 			A class or object can encapsulate functionality and data into one
 			reusable package. the data (attributes) and code (methods) are tied
 			together as a self-contained unit called an object. This
 			encapsulation helps manage complexity by keeping the interactions
 			between objects under control.
 		</p>
-		<h4 class="mt-5 text-yellow-100">Inheritance:</h4>
-		<p>
+		<h3 class="h3Title">Inheritance:</h3>
+		<p class="pExplain">
 			Classes can inherit common properties and functionality from other
 			classes. This allows for more efficient and consistent code by
 			allowing classes to share, extend, and override configurations and
 			behaviors defined in other classes.
 		</p>
-		<h4 class="mt-5 text-yellow-100">Polymorphism:</h4>
-		<p>
+		<h3 class="h3Title">Polymorphism:</h3>
+		<p class="pExplain">
 			Polymorphism allows a single interface to represent different types
 			of objects at runtime. This means that different classes can define
 			the same method or property and you can use objects of different
 			classes interchangeably.
 		</p>
-		<p class="mt-10 mb-10">
+		<p class="pSummary">
 			These benefits make OOP a popular choice for large, complex software
 			systems and applications where ease of maintenance, rapid
 			development, and code reusability are important.
