--- a/site/templates/composition.html
+++ b/site/templates/composition.html
@@ -1,47 +1,51 @@
 {% extends "base.html" %} {% block title %} Composition {% endblock %} {% block
 body %}
-<div class="max-w-2xl mx-auto mb-10">
-    <div class="inline-block float-left text-yellow-100 text-left border border-gray-200 bg-black rounded-mid p-1 fixed justify-center left-24 top-3">
-		<a class="hover:text-blue-400" href="{{ url_for("oop") }}">&lt; Back to OOP</a>
+<div class="pageBody">
+    <div class="backButton">
+		<a class="backButtonHover" href="{{ url_for("oop") }}">&lt; Back to OOP</a>
 	</div>
-	<h1 class="my-10 text-yellow-100 text-2xl">Composition</h1>
-	<p>
+	<h1 class="h1Title">Composition</h1>
+	<p class="pText">
 		Composition is a design principle in OOP where a class (the "composite"
 		or "parent") is made up of other classes (the "components" or
 		"children"). It represents a "part-of" relationship and is a strong form
 		of aggregation.
 	</p>
-	<h2 class="mt-16 text-yellow-100 text-xl">Key Points:</h2>
-	<div class="text-left">
-		<h3 class="mt-5 text-yellow-100">Definition:</h3>
-		<p>
+	<h2 class="h2Title">Key Points</h2>
+	<div class="bodyDiv">
+		<h3 class="h3Title">Definition:</h3>
+		<p class="pExplain">
 			Composition is a relationship where one class (The composite)
 			contains an instance of another class (the component). The component
 			is part of the composite. For example, a Car might have an Engine.
 			The car is the whole entity, and the engine is part of the car.
 		</p>
-		<h3 class="mt-5 text-yellow-100">Dependence:</h3>
-		<p>
+		<h3 class="h3Title">Dependence:</h3>
+		<p class="pExplain">
 			In a composition relationship, the component cannot exist
 			independently of the composite. If the composite is deleted, the
 			component is also deleted. For example, if you deleted a Car object,
 			the Engine object is also deleted because it's part of the car.
 		</p>
-		<h3 class="mt-5 text-yellow-100">Lifecycle:</h3>
-		<p>
+		<h3 class="h3Title">Lifecycle:</h3>
+		<p class="pExplain">
 			The lifecycle of the component is managed by the composite. the
 			component is created when the composite is created, and deleted when
 			the composite is deleted.
 		</p>
-		<h3 class="mt-5 text-yellow-100">Direction:</h3>
-		<p>
+		<h3 class="h3Title">Direction:</h3>
+		<p class="pExplain">
 			Composition is typically an one-way relationship. The composite
 			knows about the component, but the component does not know about the
 			composite.
 		</p>
-		<p class="mb-5 mt-16 text-yellow-100">Example:</p>
+	</div>
+		<h2 class="h2Title">
+			Example of Composition In Python
+		</h2>
+		<div class="bodyDiv">
 		<pre
-			class="p-1 bg-forest text-white font-mono rounded-md overflow-auto my-4"
+			class="codeBox"
 		>
 <code>
 class Engine:
@@ -56,20 +60,22 @@ class Car:
 car = Car("Toyota", "V8")   # create a Car instance with an Engine
 </code>
 </pre>
-		<p class="my-5">
+		<p class="pText">
 			In this example, the [ Car ] class has a composition relationship
 			with the [ Engine ] class. The [ Car ] creates an [ Engine ] when
 			it's created, so the [ Engine ] is part of the [ Car ] and can't
 			exist independently.
 		</p>
-		<p class="my-5">
+		<p class="pSummary">
 			The key difference between this example and the example dealing with
 			aggregation lies in the lifecycle and dependency of the [ Engine ]
 			object with respect to the [ Car ] object.
 		</p>
-		<h3 class="mt-10 text-yellow-100">In Aggregation:</h3>
+	</div>
+		<h3 class="h3Title">In Aggregation:</h3>
+		<div class="bodyDiv">
 		<pre
-			class="p-1 bg-forest text-white font-mono rounded-md overflow-auto my-4"
+			class="codeBox"
 		>
 <code>
 class Engine:
@@ -93,9 +99,11 @@ car = Car("Toyota", engine)     # create a Car instance with the Engine
 			the [ Car ], and if the [ Car ] is deleted, the [ Engine ] continues
 			to exist. This is a characteristic of aggregation.
 		</p>
-		<h3 class="mt-10 text-yellow-100">In Composition:</h3>
+	</div>
+		<h3 class="h3Title">In Composition:</h3>
+		<div class="bodyDiv">
 		<pre
-			class="p-1 bg-forest text-white font-mono rounded-md overflow-auto my-4"
+			class="codeBox"
 		>
 <code>
 class Engine:
@@ -110,18 +118,18 @@ class Car:
 car = Car("Toyota", "V8")       # create a Car instance with an Engine
 </code>
 </pre>
-		<p class="my-5">
+		<p class="pText">
 			The [ Car ] instance creates its own [ Engine ] instance when it's
 			constructed. The instance cannot exist without the [ Car ] instance,
 			and if the [ Car ] is deleted, the [ Engine ] is also deleted. This
 			is a characteristic of composition.
 		</p>
-		<p class="my-5">
+		<p class="pText">
 			So, the main difference is about the dependency and lifecycle of the
 			[ Engine ] with respect to the [ Car ]. In aggregation, the [ Engine
 			] can exist independently, while in composition, the [ Engine ] is
 			fully dependent on the [ Car ].
 		</p>
-		{% endblock %}
 	</div>
 </div>
+{% endblock %}
