--- a/site/templates/encapsulation.html
+++ b/site/templates/encapsulation.html
@@ -1,40 +1,42 @@
 {% extends "base.html" %} {% block title %} Encapsulation {% endblock %} {%
 block body %}
-<div class="max-w-2xl mx-auto">
-    <div class="inline-block float-left text-yellow-100 text-left border border-gray-200 bg-black rounded-mid p-1 fixed justify-center left-24 top-3">
-		<a class="hover:text-blue-400" href="{{ url_for("oop") }}">&lt; Back to OOP</a>
+<div class="pageBody">
+    <div class="backButton">
+		<a class="backButtonHover" href="{{ url_for("oop") }}">&lt; Back to OOP</a>
 	</div>
-	<h1 class="my-10 text-yellow-100 text-2xl">Encapsulation</h1>
-	<p class="text-left">
+		<h1 class="h1Title">Encapsulation</h1>
+		<p class="pText">
 		Encapsulation is one the fundamental concepts in OOP. It describes the
 		idea of wrapping data and the methods that work on data within one unit.
 		This puts restrictions on accessing variables and methods directly and
 		can prevent the accidental modification of data.
-	</p>
-	<h2 class="mt-16 text-yellow-100 text-xl">Breaking it down:</h2>
-	<div class="text-left">
-		<h3 class="mt-5 text-yellow-100">Data Hiding:</h3>
-		<p>
+		</p>
+		<h2 class="h2Title">Breaking it down</h2>
+	<div class="bodyDiv">
+		<h3 class="h3Title">Data Hiding:</h3>
+		<p class="pExplain">
 			The implementation of the class is hidden from other classes, and
 			can only be accessed through the methods of their current class.
 			This is also known as data hiding.
 		</p>
-		<h3 class="mt-5 text-yellow-100">Accessors and Mutators:</h3>
-		<p>
+		<h3 class="h3Title">Accessors and Mutators:</h3>
+		<p class="pExplain">
 			To achieve encapsulation in Python, you can use private attributes
 			and provide public getter and setter methods to modify and access
 			the attributes. These are often referred to as accessors (getters)
 			and mutators (setters).
 		</p>
-		<h3 class="mt-5 text-yellow-100">Abstraction:</h3>
-		<p>
+		<h3 class="h3Title">Abstraction:</h3>
+		<p class="pExplain">
 			Encapsulation also allows a class to change its implementation
 			without affecting other parts of the code, which is known as
 			abstraction.
 		</p>
-		<h4 class="mb-5 mt-16 text-yellow-100">Example in Python:</h4>
+	</div>
+		<h2 class="h2Title">Examples of Encapsulation In Python</h2>
+		<div class="bodyDiv">
 		<pre
-			class="p-1 bg-forest text-white font-mono rounded-md overflow-auto my-4"
+			class="codeBox"
 		>
     <code>
 class Computer:		            # define a class named Computer
@@ -56,20 +58,20 @@ c.setMaxPrice(1000)     # now, when we call the sell method, it will print the u
 c.sell()
     </code>
 </pre>
-		<p class="my-5">
+		<p class="pText">
 			In the script we defined a [ Computer ] class. We are using [
 			__init__() ] method to store the maximum selling price of [ Computer
 			]. We tried to modify the price. However, we can't change it because
 			Python treats the [ __maxprice ] as private attributes.
 		</p>
-		<p class="my-5">
+		<p class="pText">
 			As a result, to change the value, you have to use a setter method [
 			setMaxPrice() ] which takes price as parameter.
 		</p>
-		<p class="my-5">The output would be:</p>
+		<p class="pText">The output would be:</p>
 		<p></p>
 		<pre
-			class="p-1 bg-forest text-white font-mono rounded-md overflow-auto my-4"
+			class="codeBox"
 		>
     <code>
 &gt;&gt;Selling Price: 900
@@ -77,12 +79,12 @@ c.sell()
 &gt;&gt;Selling Price: 1000
     </code>
 </pre>
-		<p class="my-5">
+		<p class="pText">
 			Encapsulation helps us to avoid data being modified accidentally and
 			provides a way to protect and control access to attributes in a
 			class.
 		</p>
-		<p class="my-5">
+		<p class="pText">
 			Another way to sum it up: The [ Computer ] class encapsulates the [
 			__maxprice ] attribute and provides the [ sell ] method to display
 			it, and the [ setMaxPrice ] method to change it. The [ __maxprice ]
@@ -90,15 +92,17 @@ c.sell()
 			to change it directly won't have any effect. Instead, you have to
 			use the [ setMaxPrice ] method to modify it.
 		</p>
-		<p class="mb-5 mt-16 text-yellow-100">Another Example:</p>
-		<p class="my-5">
+	</div>
+		<h3 class="h3Title">Example 2</h3>
+		<div class="bodyDiv">
+		<p class="pText">
 			A setter method provides controlled access to modify the values of
 			private attributes. This is useful because you can add checks or
 			validation within the setter method to prevent invalid or
 			inconsistent states for your objects.
 		</p>
 		<pre
-			class="p-1 bg-forest text-white font-mono rounded-md overflow-auto my-4"
+			class="codeBox"
 		>
     <code>
 class Myclass:
@@ -114,54 +118,54 @@ obj = Myclass()
 obj.set_my_attribute(10)	# this modifies the __my_attribute value to 10
         </code>
 </pre>
-		<p class="my-5">
+		<p class="pText">
 			In this example, [ set_my_attribute ] is a setter method that
 			modifies the value of [ __my_attribute ]. It also includes a check
 			to ensure that the value cannot be set to a negative number. If you
 			try to set it to a negative number, it will raise a ValueError.
 		</p>
 	</div>
-	<h2 class="mt-16 text-yellow-100 text-xl">
-		Some Best Practices For Using Encapsulation In OOP:
+	<h2 class="h2Title">
+		Some Best Practices For Using Encapsulation In OOP
 	</h2>
-	<div class="text-left my-10">
-		<h3 class="mt-5 text-yellow-100">Data Hiding:</h3>
-		<p>
+	<div class="bodyDiv">
+		<h3 class="h3Title">Data Hiding:</h3>
+		<p class="pExplain">
 			Keep the data hidden and not directly accessible from outside the
 			class. Use private visibility for attributes which should not be
 			accessible directly.
 		</p>
-		<h3 class="mt-5 text-yellow-100">Use Accessors and Mutators:</h3>
-		<p>
+		<h3 class="h3Title">Use Accessors and Mutators:</h3>
+		<p class="pExplain">
 			Provide public getting and setter methods (accessors and mutators)
 			to access and modify the private attributes of a class. This allows
 			you to control how important variables are read and written to.
 		</p>
-		<h3 class="mt-5 text-yellow-100">Validation:</h3>
-		<p>
+		<h3 class="h3Title">Validation:</h3>
+		<p class="pExplain">
 			You can add validation logic in setter methods to protect your data
 			from getting into an inconsistent or invalid state.
 		</p>
-		<h3 class="mt-5 text-yellow-100">Abstraction:</h3>
-		<p>
+		<h3 class="h3Title">Abstraction:</h3>
+		<p class="pExplain">
 			Encapsulation is a way to achieve data abstraction. The user will
 			have the information on what methods do, but they won't need to know
 			how they do it.
 		</p>
-		<h3 class="mt-5 text-yellow-100">Reduce Coupling:</h3>
-		<p>
+		<h3 class="h3Title">Reduce Coupling:</h3>
+		<p class="pExplain">
 			Encapsulation can help reduce coupling between different parts of
 			your program, making it easier to modify without affecting other
 			parts of the code.
 		</p>
-		<h3 class="mt-5 text-yellow-100">Consistency:</h3>
-		<p>
+		<h3 class="h3Title">Consistency:</h3>
+		<p class="pExplain">
 			Be consistent in how you apply encapsulation in your code. If you
 			start using getters and setters for accessing properties of the
 			class, stick to it throughout your code.
 		</p>
-		<h3 class="mt-5 text-yellow-100">Avoid Excessive Use:</h3>
-		<p>
+		<h3 class="h3Title">Avoid Excessive Use:</h3>
+		<p class="pExplain">
 			While encapsulation is important, it's also crucial not to overuse
 			it. Not every single variable needs to be private with getters and
 			setters. If a variable doesn't need any special behavior or
