--- a/site/templates/polymorphism.html
+++ b/site/templates/polymorphism.html
@@ -1,46 +1,48 @@
 {% extends "base.html" %} {% block title %} Polymorphism {% endblock %} {% block
 body %}
-<div class="max-w-2xl mx-auto">
-    <div class="inline-block float-left text-yellow-100 text-left border border-gray-200 bg-black rounded-mid p-1 fixed justify-center left-24 top-3">
-		<a class="hover:text-blue-400" href="{{ url_for("oop") }}">&lt; Back to OOP</a>
+<div class="pageBody">
+    <div class="backButton">
+		<a class="backButtonHover" href="{{ url_for("oop") }}">&lt; Back to OOP</a>
 	</div>
-	<h1 class="my-10 text-yellow-100 text-2xl">Polymorphism</h1>
-	<p class="text-left">
+	<h1 class="h1Title">Polymorphism</h1>
+	<p class="pText">
 		The word "Polymorphism" comes from Greek and means "many shapes". In
 		programming, it refers to the ability of an object to take on many
 		forms. The most common use of polymorphism in OOP occurs when a parent
 		class reference is used to refer to a child class object.
 	</p>
-	<h2 class="mt-16 text-yellow-100 text-xl">Key Points:</h2>
-    <div class="text-left">
-        <h3 class="mt-5 text-yellow-100">Subtyping:</h3>
-	<p>
+	<h2 class="h2Title">Key Points</h2>
+    <div class="bodyDiv">
+        <h3 class="h3Title">Subtyping:</h3>
+	<p class="pExplain">
 		Subtyping, also known as subtype polymorphism, is a form of
 		polymorphism in which a subclass is datatype that is a subtype of a
 		superclass. The superclass can be used to refer to the subclass object.
 		In other words, a reference variable of a superclass can point to an
 		object of the subclass.
 	</p>
-    <h3 class="mt-5 text-yellow-100">Method Overriding: </h3>
-	<p>
+    <h3 class="h3Title">Method Overriding: </h3>
+	<p class="pExplain">
 		Method overriding is a feature that allows a subclass
 		to provide a different implementation for a method that is already
 		defined in its superclass. This is used to achieve runtime polymorphism.
 	</p>
-    <h3 class="mt-5 text-yellow-100">Operator Overloading: </h3>
-	<p>
+    <h3 class="h3Title">Operator Overloading: </h3>
+	<p class="pExplain">
 		Operator overloading is a type of polymorphism in
 		which an operator is overloaded to provide the special meaning to the
 		user-defined data type. Operator overloading is used to perform
 		operations on user-defined data type like complex numbers, fractions,
 		etc.
 	</p>
-	<p class="mb-5 mt-16 text-yellow-100">
-		Example of polymorphism in Python (also previously used to demonstrate
-		inheritance):
-	</p>
+</div>
+	<h2 class="h2Title">
+		Example of Polymorphism In Python
+	</h2>
+	<p>(previously used to demonstrate inheritance)</p>
+	<div class="bodyDiv">
     <pre
-    class="p-1 bg-forest text-white font-mono rounded-md overflow-auto my-4"
+    class="codeBox"
 >
 <code>
 class Bird:
@@ -72,27 +74,27 @@ bird3.intro()	# prints "There are many types of birds."
 bird3.flight()	# prints "Ostriches cannot fly."
 </code>
 </pre>
-	<p class="my-5">
+	<p class="pText">
 		In the above program, we defined two classes [ sparrow ] and [ ostrich
 		], both are subclasses of [ Bird ]. A method named [ flight ] is created
 		in [ Bird ] class and overridden in both subclasses. This is a perfect
 		example of polymorphism as the method [ flight ] is taking multiple
 		forms.
 	</p>
-	<p class="my-5">
+	<p class="pText">
 		Polymorphism allows us to define methods in the child class with the
 		same name as defined in their parent class. As the key aspect of
 		polymorphism is that it provides flexibility and loose coupling so that
 		code can be extended and easily maintained over time.
 	</p>
-	<p class="mt-20">
+	<p class="mt-16">
 		The previous explanation focused on inheritance. Inheritance is a
 		mechanism where you can derive a class from another class for a
 		hierarchy of classes that share a set of attributes and methods. In the
 		example, [ sparrow ] and [ ostrich ] classes are derived from the [ Bird
 		] class, hence they inherit the intro method from the [ Bird ] class.
 	</p>
-	<p class="my-5">
+	<p class="pText">
 		The current explanation focuses on polymorphism, which is a concept that
 		allows objects of different classes to be treated as objects of a
 		superclass. In the context of the example, both [ sparrow ] and [
@@ -103,25 +105,25 @@ bird3.flight()	# prints "Ostriches cannot fly."
 		action.
 	</p>
 </div>
-	<h2 class="mt-16 text-yellow-100 text-xl">Further Explanation:</h2>
-    <div class="text-left my-10">
-    <h3 class="mt-5 text-yellow-100">Inheritance:</h3>
-	<p>
+	<h2 class="h2Title">Further Explanation</h2>
+	<div class="bodyDiv">
+    <h3 class="h3Title">Inheritance</h3>
+	<p class="pExplain">
 		Is the mechanism where a class (the subclass) can derive or
 		inherit properties and methods from another class (the superclass). In
 		the given example, [ sparrow ] and [ ostrich ] are subclasses that
 		inherit from the [ Bird ] superclass, and this they inherit the [ into ]
 		and [ flight ] methods.
 	</p>
-    <h3 class="mt-5 text-yellow-100">Polymorphism:</h3>
-	<p>
+    <h3 class="h3Title">Polymorphism</h3>
+	<p class="pExplain">
 		On the other hand, is the ability of the subclasses to
 		provide their own specific implementation of a method that is already
 		provided by their superclass. In the example, the [ sparrow ] and the [
 		ostrich ] subclasses provide their own implementation of the flight
 		method. This is a from of polymorphism known as method overriding.
 	</p>
-	<p class="my-5">
+	<p class="pText">
 		So, when a method is invoked, which version of the method is to be
 		executed is determined based on the type of object being invoked on. If
 		it's a [ Bird ] object, [ Bird ]s version of [ flight ] is called. If
@@ -130,55 +132,55 @@ bird3.flight()	# prints "Ostriches cannot fly."
 		polymorphism.
 	</p>
 </div>
-    <h2 class="mt-16 text-yellow-100 text-xl">Common use cases:</h2>
-    <div class="text-left my-10">
-    <h3 class="mt-5 text-yellow-100">Creating Reusable Code:</h3>
-	<p>
+    <h2 class="h2Title">Common use cases</h2>
+    <div class="bodyDiv">
+    <h3 class="h3Title">Creating Reusable Code:</h3>
+	<p class="pExplain">
 		Polymorphism allows you to write code that does
 		not need to be changed when a new derived class is added, which makes
 		your code more reusable. You can write a function or method that uses a
 		base class type and it will be able to handle any objects of classes
 		derived from that base class.
 	</p>
-    <h3 class="mt-5 text-yellow-100">Implementing Interface Polymorphism:</h3>
-	<p>
+    <h3 class="h3Title">Implementing Interface Polymorphism:</h3>
+	<p class="pExplain">
 		In languages that support
 		interfaces (like Java or C#), polymorphism is often used to implement
 		classes that share the same methods but have different implementations.
 		This is a powerful way to decouple your code and make it more modular
 		and flexible.
 	</p>
-    <h3 class="mt-5 text-yellow-100">Design Patterns:</h3>
-	<p>
+    <h3 class="h3Title">Design Patterns:</h3>
+	<p class="pExplain">
 		Many design patterns in OOP use polymorphism. For
 		example, in the Strategy pattern, a context object contains a reference
 		to a strategy object, and delegates all requests to that object. The
 		strategy object can be changed to change the behavior of the context
 		object.
 	</p>
-    <h3 class="mt-5 text-yellow-100">Abstract Classes and Methods:</h3>
-	<p>
+    <h3 class="h3Title">Abstract Classes and Methods:</h3>
+	<p class="pExplain">
 		In some languages, you can define abstract
 		classes and methods that provide a base level of functionality, but
 		require subclasses to provide specific implementations. This is a form
 		of polymorphism.
 	</p>
-    <h3 class="mt-5 text-yellow-100">Graphics and User Interface:</h3>
-	<p>
+    <h3 class="h3Title">Graphics and User Interface:</h3>
+	<p class="pExplain">
 		In graphical and user interface
 		programming, polymorphism is used extensively. For example, you might
 		have a base [ Shape ] class and derived classes like [ Circle ], [
 		Rectangle ], etc. You can then write code that works with [ Shape ]
 		objects, and it will work with any derived shape objects.
 	</p>
-    <h3 class="mt-5 text-yellow-100">Game programming:</h3>
-	<p>
+    <h3 class="h3Title">Game programming:</h3>
+	<p class="pExplain">
 		In game programming, polymorphism is used to manage
 		and manipulate collections of different types of game objects. For
 		example, you might have a base [ GameObject ] class and derived classes
 		like [ Player ], [ Alien ], [ Asteroid ], etc./p>
 	</p>
-	<p class="mt-16">
+	<p class="pSummary">
 		The main benefit of polymorphism is that it allows you to write more
 		flexible and reusable code by allowing objects of different classes to
 		be treated as objects of a common superclass.
